--- a/build
+++ b/build
@@ -2,5 +2,8 @@
 
 [ -f "icon.ico" ] && icon_arg="-ico icon.ico"
 
+which src >/dev/null 2>/dev/null
+[ $? -eq 0 ] && go get -u github.com/akavel/rsrc
+
 rsrc -manifest wifi.manifest -o wifi.syso $icon_arg &&
 	go build
